# RTYPE

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  build.sh  format.sh  index.html  introduction.html  print.html  rfc.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: cmake-preview.yml  cmake-release.yml  common-mirror_to_epitech.yml  mdbooks.yml
client/: Client.cpp  Client.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
client/ArgumentManager/: ClientArgumentManager.cpp  ClientArgumentManager.hpp
client/config/: Config.cpp  Config.hpp
client/connection/: ClientConnection.cpp  ClientConnection.hpp  SafeQueue.cpp  SafeQueue.hpp  ServerConnection.cpp  ServerConnection.hpp
client/game/: Game.cpp  Game.hpp
client/input_manager/: InputManager.cpp  InputManager.hpp
client/lua/: ClientSideLua.cpp  ClientSideLua.hpp
client/window/: Window.cpp  Window.hpp
common/: Engine.cpp  Engine.hpp  Types.hpp  Utils.cpp  Utils.hpp  WindowsCross.hpp  main.cpp
common/ArgumentManager/: ArgumentManager.cpp  ArgumentManager.hpp
common/GameInfo/: GameInfo.cpp  GameInfo.hpp
common/Lua/: lua.cpp  lua.hpp
common/Networking/: Defines.hpp  GlobalConnection.cpp  GlobalConnection.hpp  Packet.hpp  PacketBuilder.cpp  PacketBuilder.hpp  SafeQueue.hpp  StringPacket.hpp
common/Nodes/: Node.cpp  Node.hpp
common/Nodes/Node2D/: Node2D.cpp  Node2D.hpp
common/Nodes/Node2D/CollisionNode2D/: CollisionNode2D.cpp  CollisionNode2D.hpp
common/Nodes/Node2D/CollisionNode2D/Area2D/: Area2D.cpp  Area2D.hpp
common/Nodes/Node2D/CollisionNode2D/Body2D/: Body2D.cpp  Body2D.hpp
common/Nodes/Node2D/CollisionNode2D/Body2D/RigidBody2D/: RigidBody2D.cpp  RigidBody2D.hpp
common/Nodes/Node2D/CollisionNode2D/Body2D/StaticBody2D/: StaticBody2D.cpp  StaticBody2D.hpp
common/Nodes/Node2D/CollisionShape2D/: CollisionShape2D.cpp  CollisionShape2D.hpp
common/Nodes/Node2D/Sprite2D/: Sprite2D.cpp  Sprite2D.hpp
common/Nodes/Shape2D/: Shape2D.cpp  Shape2D.hpp
common/Nodes/Shape2D/Circle2D/: Circle2D.cpp  Circle2D.hpp
common/Nodes/Shape2D/Rectangle2D/: Rectangle2D.cpp  Rectangle2D.hpp
common/Nodes/Sound/: SoundPlayer.cpp  SoundPlayer.hpp
common/Nodes/UI/: Ui.cpp  Ui.hpp
common/Nodes/UI/Box/: Box.cpp  Box.hpp
common/Nodes/UI/Label/: Label.cpp  Label.hpp
common/Nodes/UI/Parallax/: Parallax.cpp  Parallax.hpp
common/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
docs/: book.toml  rfc.txt
docs/src/: SUMMARY.md  introduction.md  rfc.md
docs/src/engine/: Networking.md  building.md  client.md  networking.md  nodeSystem.md  server.md
docs/src/game/: Area2DLibrary.md  BoxLibrary.md  ClientMethod.md  CollisionShape2DLibrary.md  LabelLibrary.md  Node2DLibrary.md  NodeLibrary.md  ParallaxLibrary.md  RigidBody2DLibrary.md  ServerMethod.md  Sprite2DLibrary.md  StaticBody2DLibrary.md  common.md  filesystem.md  libraries.md  libs.md  luau.md
docs/src/games/: pong.md  r-type.md
engine/: building.html  client.html  networking.html  nodeSystem.html  server.html
game/: Area2DLibrary.html  BoxLibrary.html  ClientMethod.html  CollisionShape2DLibrary.html  LabelLibrary.html  Node2DLibrary.html  NodeLibrary.html  ParallaxLibrary.html  RigidBody2DLibrary.html  ServerMethod.html  Sprite2DLibrary.html  StaticBody2DLibrary.html  common.html  filesystem.html  libs.html  luau.html
games/: pong.html  r-type.html
games/bubble-breaker/: manifest.json
games/bubble-breaker/lua/: index.luau
games/bubble-breaker/lua/client/: ball.luau  brick.luau  bubble.luau  init.luau  player.luau  utils.luau
games/bubble-breaker/lua/common/: ball.luau  brick.luau  game.luau
games/bubble-breaker/lua/server/: game.luau  init.luau  network.luau
games/pong/: manifest.json
games/pong/lua/client/: ball.luau  init.luau  player.luau  score.luau  utils.luau  wall.luau
games/pong/lua/server/: init.luau
games/rtype/: manifest.json
games/rtype-versus/: manifest.json
games/rtype-versus/lua/: index.luau
games/rtype-versus/lua/client/: init.luau  projectiles.luau
games/rtype-versus/lua/client/player/: localPlayer.luau  players.luau
games/rtype-versus/lua/common/: player.luau  projectiles.luau
games/rtype-versus/lua/server/: channels.luau  game.luau  init.luau
games/rtype/assets/shaders/: accessibility.fs
games/rtype/lua/: index.luau  init.luau  metatable_test.luau  test.luau
games/rtype/lua/client/: animationsUtils.luau  enemies.luau  init.luau  lagCompensation.luau  player.luau  projectiles.luau
games/rtype/lua/client/enemies/: enemies.luau
games/rtype/lua/client/player/: localPlayer.luau  players.luau
games/rtype/lua/common/: enemies.luau  init.luau  player.luau  projectiles.luau
games/rtype/lua/server/: channels.luau  enemies.luau  game.luau  init.luau  utils.luau
https:/github.com/RotClub/RTYPE/tree/main/docs/: rfc.html
libs/: hook.luau  json.luau  net.luau  utils.luau
server/: Server.cpp  Server.hpp  main.cpp
server/argumentManager/: ArgumentManager.cpp  ArgumentManager.hpp
server/client/: Client.cpp  Client.hpp
server/connection/: ServerConnection.cpp  ServerConnection.hpp
